--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = "^0.23.2"
 sentry-sdk = "^1.29.2"
 strawberry-graphql = "^0.202.1"
 pymongo = "^4.4.1"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
