--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.101.0"
-uvicorn = "^0.23.2"
 sentry-sdk = "^1.29.2"
 strawberry-graphql = "^0.202.1"
 pymongo = "^4.4.1"
 python-dotenv = "^1.0.0"
+graphene = "^3.3"
+starlette-graphene3 = "^0.6.0"
+uvicorn = {extras = ["standard"], version = "^0.23.2"}
 
 
 [tool.poetry.group.dev.dependencies]
