--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,10 @@ readme = "README.md"
 python = "^3.10"
 fastapi = "^0.101.0"
 sentry-sdk = "^1.29.2"
-strawberry-graphql = "^0.202.1"
 pymongo = "^4.4.1"
 python-dotenv = "^1.0.0"
-graphene = "^3.3"
-starlette-graphene3 = "^0.6.0"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
+ariadne = "^0.20.1"
 
 
 [tool.poetry.group.dev.dependencies]
