Finalizando criação dos modelos Card/Deck/Subdeck/Users

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DEBUG=True
-ENVIRONMENT="LOCAL"
+ENVIRONMENT=LOCAL
 
 # MongoDB Production
 MONGO_HOST_PROD=""
@@ -14,3 +14,10 @@ MONGO_PORT_LOCAL=27017
 MONGO_DATABASE_LOCAL="Flashcards"
 MONGO_USER_LOCAL="admin"
 MONGO_PASSWORD_LOCAL="admin"
+
+# MySQL Local
+MYSQL_HOST_LOCAL="localhost"
+MYSQL_PORT_LOCAL=3306
+MYSQL_DATABASE_LOCAL=Flashcards
+MYSQL_USER_LOCAL=root
+MYSQL_PASSWORD_LOCAL=root
