--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pymongo = "^4.4.1"
 python-dotenv = "^1.0.0"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 ariadne = "^0.20.1"
+pymysql = "^1.1.0"
+sqlalchemy = "^2.0.19"
+mysql-connector-python = "^8.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
