--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ pylint = "^2.17.5"
 isort = "^5.12.0"
 mypy = "^1.4.1"
 coverage = "^7.2.7"
+pytest = "^7.4.0"
+python-graphql-client = "^0.4.3"
+httpx = "^0.24.1"
 
 [build-system]
 requires = ["poetry-core"]
