Criando autenticação JWT

--- a/.env
+++ b/.env
@@ -21,3 +21,5 @@ MYSQL_PORT_LOCAL=3306
 MYSQL_DATABASE_LOCAL=Flashcards
 MYSQL_USER_LOCAL=root
 MYSQL_PASSWORD_LOCAL=root
+
+JWT_SECRET_KEY = "ja_funcionou_uma_vez_e_agr"
