--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ ariadne = "^0.20.1"
 pymysql = "^1.1.0"
 sqlalchemy = "^2.0.19"
 mysql-connector-python = "^8.1.0"
-jwt = "^1.3.1"
+pyjwt = "^2.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
