--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pymysql = "^1.1.0"
 sqlalchemy = "^2.0.19"
 mysql-connector-python = "^8.1.0"
 pyjwt = "^2.8.0"
+cryptography = "^41.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
