--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ coverage = "^7.2.7"
 pytest = "^7.4.0"
 python-graphql-client = "^0.4.3"
 httpx = "^0.24.1"
+commitizen = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core"]
